RESOLVED FIXED303512
Subtitle Previews are not visible if there is not an enabled TextTrack
https://bugs.webkit.org/show_bug.cgi?id=303512
Summary Subtitle Previews are not visible if there is not an enabled TextTrack
Jer Noble
Reported 2025-12-03 18:12:05 PST
Subtitle Previews are not visible if there is not an enabled TextTrack
Attachments
Jer Noble
Comment 1 2025-12-03 18:12:07 PST
Jer Noble
Comment 2 2025-12-03 18:13:46 PST
EWS
Comment 3 2025-12-04 08:48:12 PST
Committed 303916@main (5b1d2f13b22f): <https://commits.webkit.org/303916@main> Reviewed commits have been landed. Closing PR #54809 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.