Subtitle Previews are not visible if there is not an enabled TextTrack rdar://165805195 https://bugs.webkit.org/show_bug.cgi?id=303512

Reviewed by Eric Carlson.

MediaControlTextTrackContainerElement will check the HTMLMediaElement to see if
captions are visible before adding cues to the render tree; it should also check
whether caption previews are enabled.

* LayoutTests/media/track/text-track-caption-style-menu-expected.txt:
* LayoutTests/media/track/text-track-caption-style-menu.html:
* Source/WebCore/html/shadow/MediaControlTextTrackContainerElement.cpp:
(WebCore::MediaControlTextTrackContainerElement::updateDisplay):

Canonical link: https://commits.webkit.org/303916@main